--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,7 +12,6 @@ aptly_group: aptly
 # Host& Port
 aptly_host: 127.0.0.1
 aptly_port: 8001
-aptly_api_port: 8002
 
 # start on boot
 aptly_service_enabled: yes
@@ -21,6 +20,8 @@ aptly_service_state: started
 
 # Files & Paths
 aptly_install_path: "/opt/aptly"
+aptly_conf_path: "/etc/aptly"
+aptly_log_path: "/var/log/aptly"
 aptly_packages_path: "/var/www/repositories"
 
 ## Miscellaneous
