--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -8,13 +8,15 @@
     group: "{{ aptly_group }}"
     recurse: yes
   with_items:
+    - "{{ aptly_conf_path }}"
+    - "{{ aptly_log_path }}"
     - "{{ aptly_packages_path }}"
     - "{{ aptly_gpg_path }}"
 
 - name: APTLY | Copy config
   template:
     src: aptly.conf.j2
-    dest: /etc/aptly.conf
+    dest: "{{ aptly_conf_path }}/aptly.conf"
     mode: 0640
     owner: "{{ aptly_user }}"
     group: "{{ aptly_group }}"
@@ -28,19 +30,13 @@
     owner: "{{ aptly_user }}"
     group: "{{ aptly_group }}"
 
-- name: APTLY | Set key query
-  set_fact:
-    the_query: gpg --list-keys | grep 'pub ' | tail -1 | sed 's/pub   2048D\///g' | cut -d' ' -f1
-
 - name: APTLY | Obtain last key id
-  shell: bash -lc "{{ the_query }}"
+  shell: bash -lc "gpg --list-keys | grep 'pub ' | tail -1 | sed 's/pub   2048D\///g' | cut -d' ' -f1"
   become_user: "{{ aptly_user }}"
   become: true
   changed_when: false
   register: aptly_key_info
   ignore_errors: true
-  tags:
-    skip_ansible_lint
 ##gpg --list-keys
 ##/home/aptly/.gnupg/pubring.gpg
 ##------------------------------
@@ -61,13 +57,11 @@
   when: aptly_key_info|failed or aptly_key_info.stdout == ""
 
 - name: APTLY | Obtain last key id
-  shell: bash -lc "{{ the_query }}"
+  shell: bash -lc "gpg --list-keys | grep 'pub ' | tail -1 | sed 's/pub   2048D\///g' | cut -d' ' -f1"
   become_user: "{{ aptly_user }}"
   become: true
   register: aptly_key_info_new
   when: aptly_key_info|failed or aptly_key_info.stdout == ""
-  tags:
-    skip_ansible_lint
 
 - name: APTLY | Export key
   shell: gpg --export -a {{ aptly_user }} > {{ aptly_gpg_path }}/public.key
